[package]
name = "pardiso-src"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = [
    "Shuntaro Ohno <shuntaro94@gmail.com>"
]
description = "The package provides a PARDISO source."
documentation = "https://docs.rs/pardiso-src"
homepage = "https://github.com/doraneko94/pardiso-src"
repository = "https://github.com/doraneko94/pardiso-src"
readme = "README.md"
categories = ["external-ffi-bindings", "science"]
keywords = ["linear-algebra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intel-mkl-src = "0.5.0"